--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,16 @@
     top: 10px;
     left: 0;
 }
+circle.node {
+  cursor: pointer;
+  stroke: #34495e;
+  stroke-width: 2px;
+  box-sizing: border-box;
+  stroke-location: inside;
+}
+line.link {
+  fill: none;
+  stroke: #34495e;
+  stroke-width: 1.5px;
+}
+
